--- a/views/mylikes.erb
+++ b/views/mylikes.erb
@@ -1,33 +1,142 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!DOCTYPE HTML>
+<html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <title>breakfast</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/stylesheets/photoalbum.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<title>Obscura</title>
+<link rel="stylesheet" type="text/css" media="all" href="/stylesheets/style.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/media-queries.css" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,300,700,700italic|Open+Sans+Condensed:300,700' rel="stylesheet" type='text/css'>
+<!--[if IE 8]>
+<link rel="stylesheet" type="text/css" href="style/css/ie8.css" media="all" />
+<![endif]-->
+<!--[if IE 9]>
+<link rel="stylesheet" type="text/css" href="style/css/ie9.css" media="all" />
+<![endif]-->
+<script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/js/ddsmoothmenu.js"></script>
+<script type="text/javascript" src="/js/retina.js"></script>
+<script type="text/javascript" src="/js/selectnav.js"></script>
+<script type="text/javascript" src="/js/jquery.masonry.min.js"></script>
+<script type="text/javascript" src="/js/jquery.fitvids.js"></script>
+<script type="text/javascript" src="/js/jquery.backstretch.min.js"></script>
+<script type="text/javascript" src="/js/jquery.dcflickr.1.0.js"></script>
+<script type="text/javascript" src="/js/twitter.min.js"></script>
+<script type="text/javascript" src="/js/function.js"></script>
+<script type="text/javascript">
+	$.backstretch("/images/bg/1.jpg");
+</script>
 </head>
 <body>
-  <header>
-      <h1>my likes</h1>
-      <p><a href="/">view all</a></p>
-  </header>
-  <main>
-    <% @images.each do |image| %>
-      <article>
-        <figure>
-          <img src="<%= image.url %>">
-        </figure>
-        <section>
-          <p><%= image.title %></p>
-          <p>description:<%= image.description %></p>
-          <p>tags:<%= image.tags %></p>
-          <form action="/unlike" method="post">
-             <input type="hidden" name="id" value=<%= image.id %>>
-            <input type="submit" value="unlike">
-          </form>
-        </section>
-      </article>
-    <% end %>
-    </main>
+<div class="scanlines"></div>
+
+<!-- Begin Header -->
+<div class="header-wrapper opacity">
+	<div class="header">
+		<!-- Begin Logo -->
+		<div class="logo">
+			<h1>Food Trip
+			<% if session[:user] %>
+				|
+				<span id="username"><%= User.find(session[:user]).name %></span>
+			<% end %>
+			</h1>
+	    </div>
+		<!-- End Logo -->
+		<!-- Begin Menu -->
+		<div id="menu-wrapper">
+			<div id="menu" class="menu">
+				<ul id="tiny">
+					<li><a href="/">Top</a></li>
+					<% if session[:user]  %>
+						<li  class="active" ><a href="/mylikes">MyPage</a></li>
+						<li><a href="/map">Map</a></li>
+						<li><a href="/signout">Signout</a></li>
+					<% else %>
+						<li><a>Please Sign in or Sign up</a></li>
+					<% end %>
+				</ul>
+			</div>
+		</div>
+		<div class="clear"></div>
+		<!-- End Menu -->
+	</div>
+</div>
+<!-- End Header -->
+
+<!-- Begin Wrapper -->
+<div class="wrapper">
+
+	<% unless session[:user] %>
+		<div class="box" id="signup">
+			<h1 class="title">Sign up</h1>
+			<div class="form-container">
+				<form class="forms" method="post" action="/signup" enctype="multipart/form-data">
+					<fieldset>
+						<ol>
+							<li class="form-row text-input-row"><label>Name</label><input type="text" name="name"/></li> 
+							<li class="form-row text-input-row"><label>password</label><input type="password" name="password" /></li>
+							<li class="form-row text-input-row"><label>password_confirmation</label><input type="password" name="password_confirmation"/></li>
+							<li class="button-row"><input type="submit" value="submit" name="submit" class="btn-submit" /></li>
+						</ol>
+					</fieldset>
+				</form>
+			</div>
+		</div>
+		<div class="box" id="signin">
+			<h1 class="title">Sign in</h1>
+			<div class="form-container">
+				<form class="forms" method="post" action="/signin" enctype="multipart/form-data">
+					<fieldset>
+						<ol>
+							<li class="form-row text-input-row"><label>Name</label><input type="text" name="name"/></li> 
+							<li class="form-row text-input-row"><label>password</label><input type="password" name="password" /></li>
+							<li class="button-row"><input type="submit" value="submit" name="submit" class="btn-submit" /></li>
+						</ol>
+					</fieldset>
+				</form>
+			</div>
+		</div>
+	<% end %>
+
+	<!-- Begin Blog Grid -->
+	<div class="blog-wrap blog" id="photo">
+		<!-- Begin Blog -->
+		<div class="blog-grid">
+		<% @images.each do |image_added| %>	
+			<!-- Begin Image Format -->
+			<div class="post format-image box"> 
+				<div class="frame">
+					<img src="<%= image_added.url %>" alt="" />
+				</div>
+				<h2 class="title"><%= image_added.title %></h2>
+				<a><%= image_added.description %></a>
+				<a><%= image_added.tags %></a>
+				<div class="details"style="text-align:right;">
+					<form action="/unlike" method="post" id="unlike">
+						<input type="hidden" name="id" value=<%= image_added.id %>>
+						<input type="submit" value="delete" style="font-size:15px;background: transparent;margin:0 0 0 auto;width:auto">
+					</form>
+				</div>
+			</div>
+	 		<!-- End Image Format --> 
+	 	<% end %>	
+			
+	 	</div>
+		<!-- End Blog -->
+	</div>
+<!-- End Blog Grid -->
+
+<!-- Begin Page-navi -->
+    <div id="navigation" style="text-align:center;margin-bottom:20px;"><a href="/" ><span class="meta-nav-prev">Other posts</a></div>
+      <!-- 
+			<div class="nav-next"><a href="#" ><span class="meta-nav-next">Newer posts &rarr;</span></a></div>
+			 --> 
+    </div>
+    <!-- End Page-navi --> 
+
+</div>
+<!-- End Wrapper -->
+<script type="text/javascript" src="/js/scripts.js"></script>
 </body>
 </html>
